--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,6 +18,8 @@
             <div class="mb-3">
                 <label class="form-label" for="password">Password:</label>
                 <input type="password"  class="form-control" name="password" id="password">
+                <div id="emailHelp" class="form-text"><a href="/password/reset">Forgot password?</a></div>
+                <div id="emailHelp" class="form-text"><a href="/register">Register</a></div>
             </div>
                 <input type="submit" value="Sign in" class="btn btn-dark w-100">
         </form>
