--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,7 +9,6 @@
 </head>
 <body >
     <%- include("navbar") %>
-
     <div class="container d-flex justify-content-center">
         <form action="" method="post" class="bg-body-tertiary p-5">
             <div class="mb-3">
@@ -23,6 +22,7 @@
             <div class="mb-3">
                 <label class="form-label" for="password">Password:</label>
                 <input type="password"  class="form-control" name="password" id="password">
+                <div id="emailHelp" class="form-text"><a href="/login">Already have an account?</a></div>
             </div>
                 <input type="submit" value="Sign up" class="btn btn-dark w-100">
         </form>
