--- a/views/confirm-email.ejs
+++ b/views/confirm-email.ejs
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>...</title>
 </head>
 <body>
     <%- include("navbar") %>
-    <h1>Hello <%= user.username%></h1>
+    <h1>Check your email to confirm it</h1>
     <script src="/js/navbar.js"></script>
 </body>
 </html>
