Send link to reset password

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/404.css">
-    <title>Document</title>
+    <title>Not found</title>
 </head>
 <body>
-  <%- include("navbar") %>
   <div id="main">
     <div class="fof">
           <h1>Error 404</h1>
