--- a/views/confirm-email.ejs
+++ b/views/confirm-email.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <%- include("navbar") %>
-    <h1>Check your email to confirm it</h1>
+    <h1>Check your email to confirm your account</h1>
     <script src="/js/navbar.js"></script>
 </body>
 </html>
