--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -27,7 +27,7 @@
         </div>
       </nav>
       <div class="logout">
-        <button>Logout</button>
+        <a class="btn">Logout</a>
       </div>
       <script src="/js/navbar"></script>
 </body>
