--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,20 +1,65 @@
+nav {
+    background-color: #2c2c2c;
+}
+
+.nav {
+display: flex;
+justify-content: space-between;
+width: 100%;
+align-items: center;
+}
+
+.links {
+    display: flex;
+    gap: 10px;
+}
+
+ul {
+    list-style: none;
+    margin: 10px !important;
+}
+
+ul li a {
+    color: #fff;
+    text-decoration: none;
+    position: relative;
+}
+
+ul li a::before {
+    content: "";
+    position: absolute;
+    background-color: crimson;
+    transition: 0.5s;
+    width: 100%;
+    height: 1px;
+    bottom: -5px;
+    clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+}
+
+ul li a:hover::before {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+
 .logout {
     position: absolute;
-    background-color: rgb(244, 244, 244);
-    width: 100px;
+    background-color: #2c2c2c;
+    width: 70px;
     height: 100px;
-    right: 10px;
-    display: none;
-    border-radius: 10px;
+    top: 61px;
+    right: 123px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
 }
 
-.logout button {
-    margin: 10px;
-    position: absolute;
-    right: 0;
-    border: none;
+.expand {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
-.turn {
-    display: block;
+.logout a {
+    color: white;
+    text-decoration: none;
 }
