--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -8,27 +8,22 @@
     <title>Navbar</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-between w-100">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link user">Sign in</a>
-              </li>
-            </ul>
+    <nav class="navbar">
+      <div class="container">
+        <div class="nav">
+          <ul class="links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+          <ul class="profile">
+            <li><a href="/login" class="user">Sign in</a></li>
+          </ul>
+          <div class="logout">
+            <a href="#" class="logout_btn">Logout</a>
           </div>
         </div>
-      </nav>
-      <div class="logout">
-        <a class="btn">Logout</a>
       </div>
+    </nav>
       <script src="/js/navbar"></script>
 </body>
 </html>
